--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="controls">
             <div class="control">
-                <span>dark theme</span>
+                <label>dark theme</label>
                 <div class="switch" data-property="theme">
                     <div class="circle"></div>
                 </div>
