--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
     <div class="container">
         <div class="controls">
             <div class="control">
-                <label>dark theme</label>
+                <label>Dark theme</label>
                 <div class="switch" data-property="theme">
                     <div class="circle"></div>
                 </div>
             </div>
             <div class="control">
-                <span>hide form</span>
+                <span>Hide form</span>
                 <div class="switch" data-property="hide_form">
                     <div class="circle"></div>
                 </div>
             </div>
             <div class="control">
-                <span>hide name</span>
+                <span>Hide name</span>
                 <div class="switch" data-property="hide_name">
                     <div class="circle"></div>
                 </div>
             </div>
             <div class="control">
-                <span>hide phone</span>
+                <span>Hide phone</span>
                 <div class="switch" data-property="hide_phone">
                     <div class="circle"></div>
                 </div>
